--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 body {
   color: rgb(210, 202, 222);
   background-color: rgb(27, 1, 50);
-  background-image: url("/imgs/landingpage.png");
+  background-image: url("/imgs/landingpage.webp");
   background-size: cover;
 }
 
