completed the 404 page using not-found jsx, can't believe it can't cover the whole page coz of the layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,3 +60,11 @@ body {
 .custom-btn {
   @apply px-7 py-5 text-base rounded-none font-nasa bg-slate-100 text-black ;
 }
+
+.notfound {
+  @layer{
+    background-color: rgb(27, 1, 50);
+    background-image: url("/imgs/notFound.png");
+    background-size: cover;
+  }
+}
