--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@ body {
 
 .img-box {
   @layer {
-    box-shadow: 29px -30px 0px 8px rgba(54, 31, 67, 1);
+    box-shadow: 29px -30px 0px 8px #361f43;
     -webkit-box-shadow: 29px -19px 0px 8px rgba(54, 31, 67, 1);
     -moz-box-shadow: 29px -19px 0px 8px rgba(54, 31, 67, 1);
   }
